#68780 fix search input styling on iOS

--- a/Snowdog_Components/components/Organisms/header/_search-form.scss
+++ b/Snowdog_Components/components/Organisms/header/_search-form.scss
@@ -19,6 +19,7 @@
 
     &__input {
         width: 100%;
+        -webkit-appearance: none; // sass-lint:disable-line no-vendor-prefixes
     }
 
     &__button {
